@@ -1,3 +1,6 @@
+2010-05-28  6.6.2.1 Glenn Randers-Pehrson <glennrp@image...>
+  * Prevent coders/png.c from attempting to write an empty tRNS chunk.
+
 2010-05-25  6.6.2.1 Anthony Thyssen <A.Thyssen@griffith...>
   * Finish for Square Array Rotates (off center origin rotate)
   * Added HitAndMiss kernel Ridges2 to find 2 pixel thick ridges
